--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
 		<version>5.9.1</version>
 		<scope>test</scope>
 	</dependency>
+	<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.9</version>
+		</dependency>
     <dependency>
 	    <groupId>rs.np</groupId>
 	    <artifactId>cirkovic-anja-0077-2019-zajednicki</artifactId>
